--- a/contexttransalator/contexttranslator.css
+++ b/contexttransalator/contexttranslator.css
@@ -113,3 +113,7 @@ select:focus {
     color: #000
 }
 /*** END Bootstrap context menu example 1 */
+
+.language-select-container {
+    font-size: 0.75rem;
+}
